Add slides for TicAuto Music Player with MediaBrowser.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: slide
 title: Tankery's Slides
+title_slide: false
 tags:
   - Presentation
   - Reveal.js
@@ -27,4 +28,3 @@ published: true
     {% endif %}
 </section>
 {% endfor %}
-
