Change slides style, align content to top-left.

--- a/_drafts/2017-01-24-suggestions-for-code-quality.html
+++ b/_drafts/2017-01-24-suggestions-for-code-quality.html
@@ -13,9 +13,11 @@ preview: |
   - 帮助提升代码质量的方式
   - 一些 best practices
   - 技术资料的获取
+slides:
+  theme: black
 ---
 
-<section data-markdown>
+<section data-markdown class="center">
   # 写好代码的几点建议
   ### Tankery @ Mobvoi Inc.
 </section>
