--- a/_drafts/2017-02-11-media-browser-intro.html
+++ b/_drafts/2017-02-11-media-browser-intro.html
@@ -7,7 +7,7 @@ tags:
   - 音乐
   - Ticwear
 featured: true
-published: false
+published: true
 preview: |
   - MediaSession 介绍
   - MediaBrowser 介绍
@@ -15,7 +15,7 @@ preview: |
   - 参考资料
 ---
 
-<section data-markdown>
+<section data-markdown class="center">
   ## 基于 MediaBrowser 搭建音乐应用
   ### Tankery @ Mobvoi Inc.
 </section>
