Add references id.

--- a/_posts/2017-08-13-separation-of-duty.html
+++ b/_posts/2017-08-13-separation-of-duty.html
@@ -306,7 +306,7 @@ void makeEspresso() {
   - 掘金： 比较高质量的技术文字。
 </section>
 
-<section data-markdown class="small">
+<section data-markdown class="small" id="references">
   <script type="text/template">
     # References
 
